--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist/players"
-  command = "ng build"
+  command = "ng build --prod"
 [[redirects]]
   from = "/*"
   to = "/index.html"
